test/integration/error/err_04_const_reassign.pl0
program constReassign;
const G = 100;
procedure p();
begin
  G := 20; { Error: G is const }
end;
begin call p() end